frontend/test/should_fail/ret_012.grg

rule r {
	pattern {
		x: Node;
	}
	modify {
		return(x);
	}
}
